# seithar-cogdef

./: .gitignore  CONTRIBUTING.md  MISSION.md  README.md  SKILL.md  inoculator.py  monitor.py  narrator.py  profiler.py  pyproject.toml  scanner.py  shared_config.py  test_evolve.py  test_inoculator.py  test_scanner.py
demo/: index.html
taxonomy/: evolve.py  schema.json
test_corpus/: benign_01.txt  benign_02.txt  benign_03.txt  benign_04.txt  benign_05.txt  manipulative_01.txt  manipulative_02.txt  manipulative_03.txt  manipulative_04.txt  manipulative_05.txt  manipulative_06.txt  manipulative_07.txt  manipulative_08.txt  manipulative_09.txt  manipulative_10.txt
